--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 - name: Home
   link: /
 - name: About
-  link: about.html
+  link: /about.html
 - name: Blog
-  link: blog.html
+  link: /blog.html
   
